@startuml class_diag

class Public_user
Public_user : -pu_coordinates
Public_user "*" -- "*" Service
(Public_user, Service) . Search

class Account
Account : -username
Account : -hash
Account : -salt
Account : +change_pass(current, new)
Account : +change_username(current, new)
Account : +delete_acc()

class Admin_Account
Admin_Account ---|> Account
Admin_Account "0,1" -- "*" User_Account : Suspend
Admin_Account "0,1" -- "*" User_Account : Ban
Admin_Account "0,1" -- "*" Service : Manage

class User_Account
User_Account : -status
User_Account : -search_history_activated
User_Account : +set_history_log(value)
User_Account ---|> Account
User_Account ---|> Public_user
User_Account "1" -- "*" plan : Create
User_Account "*" -- "*" Service
(User_Account, Service) . Favorite
User_Account "*" -- "*" Service
(User_Account, Service) . Rating
User_Account "1" -- "*" Search_history : Add
User_Account "1" -- "*" Service : Manage personnal

class Search
Search : -distance

class Service
Service : -latitude
Service : -longitude
Service : -type
Service : -title
Service : -address
Service "1" -- "*" Image : have

class Search_history
Search_history : -search_string

class Image
Image : -url

class Stop
Stop : -stop_datetime

class plan
plan : -plan_title
plan : -plan_description
plan : -plan_start
plan : -plan_end
plan "*" --o "*" Service
(plan, Service) . Stop

class Favorite
Favorite : -add_date

class Rating
Rating : -stars
Rating : -comment


@enduml